# phi-guard

./: .gitignore  .phiguardignore  .pre-commit-hooks.yaml  README.ko.md  README.md  pyproject.toml  test_phi.txt
.github/actions/phi-guard/: action.yml
src/phi_guard/: cli.py  engine.py  ignore.py
src/phi_guard/recognizers/: account.py  age.py  dea.py  device.py  drivers_license.py  fax.py  medicare.py  mrn.py  npi.py  registry.py  ssn.py  vin.py  zip_code.py
src/phi_guard/reporters/: __init__.py  sarif.py
tests/: __init__.py  conftest.py  test_engine.py  test_ignore.py
tests/test_recognizers/: __init__.py  test_account.py  test_age.py  test_dates.py  test_dea.py  test_device.py  test_drivers_license.py  test_email.py  test_fax.py  test_ip.py  test_medicare.py  test_mrn.py  test_npi.py  test_phone.py  test_ssn.py  test_url.py  test_vin.py  test_zip_code.py
