[project]
name = "phi-guard"
version = "0.1.0"
description = "HIPAA PHI scanner for CI/CD"
authors = [
    {name = "Eddy Kim",email = "eddykim0118@gmail.com"}
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "presidio-analyzer (>=2.2.361,<3.0.0)",
    "presidio-anonymizer (>=2.2.361,<3.0.0)",
    "spacy (>=3.8.11,<4.0.0)",
    "typer (>=0.24.1,<0.25.0)",
    "rich (>=14.3.3,<15.0.0)"
]

[project.scripts]
phi-guard = "phi_guard.cli:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "faker (>=40.8.0,<41.0.0)"
]
